k3s/lapi/applications/transmission/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: linuxserver/transmission:4.1.3
          ports:
            - containerPort: 9091
              name: http
            - containerPort: 51413
              name: torrent-tcp
            - containerPort: 51413
              protocol: UDP
              name: torrent-udp
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: watch
              mountPath: /watch
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "4000m"
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: media
          hostPath:
            path: /mlem/media
            type: Directory
        - name: watch
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
      name: http
    - port: 51413
      targetPort: 51413
      protocol: TCP
      name: torrent-tcp
    - port: 51413
      targetPort: 51413
      protocol: UDP
      name: torrent-udp
  selector:
    app: transmission
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: transmission-policy
spec:
  podSelector:
    matchLabels:
      app: transmission
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: caddy
      ports:
        - protocol: TCP
          port: 9091
    - from:
        - podSelector:
            matchLabels:
              app: sonarr
      ports:
        - protocol: TCP
          port: 9091
    - from:
        - podSelector:
            matchLabels:
              app: radarr
      ports:
        - protocol: TCP
          port: 9091
    - ports:
        - protocol: TCP
          port: 51413
        - protocol: UDP
          port: 51413
  egress:
    - {}
